causal-model-jobs successfully executed and files modified

--- a/CODE-RajulShakywar/CODE/example/Causal-model/Yamls/Causal-model-tutorial.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Yamls/Causal-model-tutorial.ipynb
@@ -7,20 +7,20 @@
     "tags": []
    },
    "source": [
-    "# Running sklearn and vitcifar examples\n",
+    "# Running causal-model job\n",
     "\n",
     "Steps are as follows - \n",
     "\n",
     "1.Delete all the exisiting resources if running already\n",
     "2.Create pvc\n",
     "3.Create pod with volume mount as a recent pvc\n",
-    "4.Copy randomforest.py and VitCifar.py scripts to the volume mounted by pod\n",
+    "4.Copy run_install.sh and Causal-model.py scripts to the volume mounted by pod\n",
     "5.Create jobs "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "id": "ab3ec255-51d2-43fd-8ec0-433be742ab09",
    "metadata": {
     "tags": []
@@ -30,10 +30,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pod \"gp-engine-unoselab01-pod1\" deleted\n",
-      "pod \"job-casual-model-gp-engine-unoselab01-dqc9t\" deleted\n",
-      "pod \"job-casual-model-gp-engine-unoselab01-jv2f6\" deleted\n",
-      "job.batch \"job-casual-model-gp-engine-unoselab01\" deleted\n"
+      "No resources found\n",
+      "No resources found\n"
      ]
     }
    ],
@@ -43,27 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "id": "d6896398-5aa6-4ad5-96de-d643a6165e74",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "persistentvolumeclaim \"pvc-gp-engine-unoselab01\" deleted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl delete pvc --all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "e8cde4e5-a240-4bfe-b7f1-42cfd1608597",
    "metadata": {
     "tags": []
@@ -83,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "id": "87b7c8ab-373b-4a1a-b3c0-b5125978e2d2",
    "metadata": {
     "tags": []
@@ -94,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "NAME                       STATUS   VOLUME                                     CAPACITY   ACCESS MODES   STORAGECLASS          AGE\n",
-      "pvc-gp-engine-unoselab01   Bound    pvc-0dbec18c-8a21-4db7-a4be-7cb081b85dd5   50Gi       RWX            rook-cephfs-central   4s\n"
+      "pvc-gp-engine-unoselab01   Bound    pvc-54ec7ea6-e23d-48a9-bda2-f56e5930ee56   50Gi       RWX            rook-cephfs-central   19s\n"
      ]
     }
    ],
@@ -104,20 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "257f9e56-b217-4006-94d2-acb3f0c7eb98",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "!kubectl apply -f pod_pvc.yml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b2f847b0-3998-4124-bb72-e9a061fc4633",
    "metadata": {
     "tags": []
    },
@@ -131,12 +109,12 @@
     }
    ],
    "source": [
-    "!kubectl apply -f test_pod.yml"
+    "!kubectl apply -f pod_pvc.yml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "id": "67f584fe-f041-4649-91d7-c9f73e8f47a0",
    "metadata": {
     "tags": []
@@ -146,8 +124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NAME                        READY   STATUS              RESTARTS   AGE\n",
-      "gp-engine-unoselab01-pod1   0/1     ContainerCreating   0          3s\n"
+      "NAME                        READY   STATUS    RESTARTS   AGE\n",
+      "gp-engine-unoselab01-pod1   1/1     Running   0          17s\n"
      ]
     }
    ],
@@ -157,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "id": "34ade1c7-05d6-4639-b5dd-cef82b1d7672",
    "metadata": {
     "tags": []
@@ -169,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69ce5358-f0df-44c7-80c6-64fb115dceb7",
+   "execution_count": 79,
+   "id": "9fd6362f-7038-4d47-8af1-c0adb6e7ddcb",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!kubectl cp ./scripts/test.py gp-engine-unoselab01-pod1:/data/test.py"
+    "!kubectl cp ./scripts/run_install.sh gp-engine-unoselab01-pod1:/data/run_install.sh"
    ]
   },
   {
@@ -193,20 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "77697524-11ca-44cf-80e3-98f872a7d83c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "!kubectl create -f ./causal_model_job.yml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "16b9132c-628f-4d3e-a6be-4002de1ea08d",
    "metadata": {
     "tags": []
    },
@@ -220,34 +186,24 @@
     }
    ],
    "source": [
-    "!kubectl create -f ./test_job.yml"
+    "!kubectl create -f ./causal_model_job.yml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0c5c2cee-6877-41ce-bce0-202bc8209449",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                                          READY   STATUS    RESTARTS   AGE\n",
-      "gp-engine-unoselab01-pod1                     1/1     Running   0          5m9s\n",
-      "job-casual-model-gp-engine-unoselab01-vkhvb   1/1     Running   0          67s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl get pods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 84,
    "id": "64698daf-512b-4fe0-9c0c-8cbf5ba719c8",
    "metadata": {
     "tags": []
@@ -257,7 +213,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No resources found in gp-engine-unoselab01 namespace.\n"
+      "NAME                                    COMPLETIONS   DURATION   AGE\n",
+      "job-casual-model-gp-engine-unoselab01   0/1           7m12s      7m12s\n"
      ]
     }
    ],
@@ -274,12 +231,12 @@
    },
    "outputs": [],
    "source": [
-    "!job_name=$(kubectl get pods | grep job-sklearn-gp-engine-unoselab01 | awk '{print $1}') && kubectl logs --tail=1 $job_name"
+    "!job_name=$(kubectl get pods | grep job-casual-model-gp-engine-unoselab01 | awk '{print $1}') && kubectl logs --tail=1 $job_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 81,
    "id": "e9fd232d-a789-4628-beb9-2092e5661e66",
    "metadata": {
     "tags": []
@@ -307,16 +264,6 @@
    "outputs": [],
    "source": [
     "!kubectl get pods"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71322183-5847-43a2-8730-326b7e2c012a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!job_name=$(kubectl get pods | grep job-vitcifar-gp-engine-unoselab01 | awk '{print $1}') && kubectl logs --tail=5 $job_name"
    ]
   },
   {
