Replace run_training.ipynb

--- a/CODE-Roberta/run_training.ipynb
+++ b/CODE-Roberta/run_training.ipynb
@@ -152,11 +152,6 @@
     }
    ],
    "source": [
-    "\n",
-    "DATASET_JAVA_TOKEN_RAW = '/home/user1-selab3/shradha_test/roberta/roberta/DATASET/DATASET/JAVA/TOKEN/RAW/'#os.environ['HOME']+'/Documents/2021MSR-StudyBert-RoBertaCode/roberta/DATASET/JAVA/TOKEN/RAW/'\n",
-    "if os.path.isdir(DATASET_JAVA_TOKEN_RAW):\n",
-    "    print('[DBG] Data:', DATASET_JAVA_TOKEN_RAW)\n",
-    "\n",
     "class Args:\n",
     "\n",
     "    def __init__(self):\n",
@@ -207,8 +202,8 @@
     "\n",
     "args = Args()\n",
     "args.vocab_size = 50_000\n",
-    "args.train_data_file = DATASET_JAVA_TOKEN_RAW + 'training_masked_code-small20per' # 20percent small\n",
-    "args.eval_data_file = DATASET_JAVA_TOKEN_RAW + 'eval_masked_code-small20per' # 20percent small"
+    "args.train_data_file = '/home/user1-selab3/shradha_test/roberta/roberta/DATASET/DATASET/JAVA/TOKEN/RAW/training_masked_code-small20per'\n",
+    "args.eval_data_file = '/home/user1-selab3/shradha_test/roberta/roberta/DATASET/DATASET/JAVA/TOKEN/RAW/eval_masked_code-small20per'"
    ]
   },
   {
