Video tutorials added

--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
@@ -5,9 +5,17 @@
    "id": "9257db45-6b86-4b37-9d56-72dd88a0ac8e",
    "metadata": {},
    "source": [
-    "# Kuberenetes installation and setup\n",
+    "# Kubernetes configuration and setup\n",
     "\n",
-    "This notebook will help to install and configure kuberntes on your system"
+    "This notebook will help to install and configure kubernetes on your system, you can refer to the video tutorial below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95a60b68-87ba-46be-81eb-01f4f569aba9",
+   "metadata": {},
+   "source": [
+    "<video width=\"760\" height=\"500\" controls src=\"./images/kubernetes-configuration.mp4\" />"
    ]
   },
   {
@@ -17,7 +25,7 @@
    "source": [
     "## Step 1: Donwload Config file \n",
     "\n",
-    "Download the config file from NRP portal"
+    "Download the config file from NRP portal - https://portal.nrp-nautilus.io"
    ]
   },
   {
@@ -35,7 +43,7 @@
    "id": "cdde3f51-6c49-4485-802d-e2aaa7084a55",
    "metadata": {},
    "source": [
-    "## Step 2: Upload You Config\n",
+    "## Step 2: Upload Your Config\n",
     "\n",
     "From the Jupyter Lab interface, click on the Upload symbol, and select the config you have downloaded from the NRP portal"
    ]
@@ -53,10 +61,18 @@
    "id": "4ce9ee95-b29d-4372-963e-33cd0aab538e",
    "metadata": {},
    "source": [
-    "## Step 3: Install kubectl\n",
+    "## Step 3: Kubectl installation\n",
     "\n",
     "Install the kubectl in four steps \n",
     "(Ref: https://kubernetes.io/docs/tasks/tools/install-kubectl-linux)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5124dabb-1007-480a-86d4-887050d85d7a",
+   "metadata": {},
+   "source": [
+    "<video width=\"760\" height=\"500\" controls src=\"./images/kubectl_setup.mp4\" />"
    ]
   },
   {
@@ -179,23 +195,100 @@
   {
    "cell_type": "markdown",
    "id": "8df72418-24ca-454d-9f51-8a60d0075334",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Step 4: Install k9s\n",
+    "## Step 4: k9s Installation\n",
     "\n",
-    "Step I: Install K9s tool to visualize the kubernetes resources without entering kubectl commands  \n",
+    "Install K9s tool to visualize the kubernetes resources without entering kubectl commands  \n",
     "(Ref. https://webinstall.dev/k9s/)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5244dccc-bdd8-44e5-9a4f-e7ae2c476112",
+   "metadata": {},
+   "source": [
+    "<video width=\"760\" height=\"500\" controls src=\"./images/k9s_installation.mp4\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "745b31e0-5017-4ac5-9fdd-e181cc41c10e",
+   "metadata": {},
+   "source": [
+    "Step I: Download script and then pipe it to shell"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8b937ef7-b68c-4709-a528-0e635c05c9b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      ">>> \u001b[1m\u001b[32mWelcome to\u001b[39m\u001b[22m \u001b[36mWebi\u001b[39m\u001b[1m\u001b[32m!\u001b[39m\u001b[22m \u001b[2m- modern tools, instant installs.\u001b[22m  <<<\n",
+      "    We expect your experience to be \u001b[3mabsolutely perfect\u001b[23m!\n",
+      "\n",
+      "    \u001b[1m\u001b[33mSuccess\u001b[39m\u001b[22m? Star it!   \u001b[2mhttps://github.com/webinstall/webi-installers\u001b[22m\n",
+      "    \u001b[1m\u001b[33mProblem\u001b[39m\u001b[22m? Report it: \u001b[2mhttps://github.com/webinstall/webi-installers/issues\u001b[22m\n",
+      "                        \u001b[2m(your system is\u001b[22m \u001b[2m\u001b[33mGNU/Linux\u001b[39m\u001b[22m/\u001b[2m\u001b[33mx86_64\u001b[39m\u001b[22m \u001b[2mwith\u001b[22m \u001b[2m\u001b[33mlibc\u001b[39m\u001b[22m \u001b[2m&\u001b[22m \u001b[2m\u001b[33mcurl+wget\u001b[39m\u001b[22m\u001b[2m)\u001b[22m\n",
+      "\n",
+      "\u001b[36mBootstrapping\u001b[39m \u001b[1m\u001b[32mWebi\u001b[39m\u001b[22m\n",
+      "    \u001b[2mFound\u001b[22m \u001b[2m\u001b[32m~/.local/bin/webi\u001b[39m\u001b[22m\n",
+      "    Running \u001b[2m\u001b[35m~/.local/bin/webi k9s@stable\u001b[39m\u001b[22m\n",
+      "\n",
+      "\u001b[36mInstalling\u001b[39m \u001b[1m\u001b[32mk9s\u001b[39m\u001b[22m \u001b[36m...\u001b[39m\n",
+      "    \u001b[2mFound\u001b[22m \u001b[2m\u001b[32m ~/.local/bin\u001b[39m\u001b[22m\n",
+      "    \u001b[1m\u001b[32m'k9s v0.32.4'\u001b[39m\u001b[22m already installed:\n",
+      "    \u001b[1m\u001b[36m~/.local/bin/k9s\u001b[39m\u001b[22m => \u001b[2m\u001b[32m~/.local/opt/k9s-v0.32.4/bin/k9s\u001b[39m\u001b[22m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl -sS https://webi.sh/k9s | sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c976bff0-14e4-46f3-a6fe-af37c3cfc194",
+   "metadata": {},
+   "source": [
+    "Step II: Update PATH environment variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "20da5a1f-3981-4b8e-912f-d7cdfe6d18c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl -sS https://webi.sh/k9s | sh\n",
     "!export PATH=\"$HOME/.local/bin:$PATH\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3404592f-bd18-4fe3-9552-c423c0222497",
+   "metadata": {},
+   "source": [
+    "Step III: Update .bashrc file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d01d533f-f194-4668-a7df-254ea652f6b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!source ~/.bashrc"
    ]
   },
   {
@@ -203,7 +296,7 @@
    "id": "28ab97cd-b2cc-496b-9e8f-1f11d0cd7566",
    "metadata": {},
    "source": [
-    "Step II: Test k9s tool "
+    "Step IV: Launch and test k9s tool "
    ]
   },
   {
@@ -217,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f995ef67-6c20-4d10-9010-5f5c927f6404",
+   "id": "00889001-be75-44c7-8d74-23d1d46734d1",
    "metadata": {},
    "outputs": [],
    "source": [
