--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step2-persistant_volume_creation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step2-persistant_volume_creation.ipynb
@@ -5,9 +5,17 @@
    "id": "e17d86e8-3aaa-47a1-9eac-210d78a95f56",
    "metadata": {},
    "source": [
-    "# Example 1: Runnign Causal-model pyhton script as a kubernetes job\n",
+    "# Example 1: Persistent volume creation\n",
     "\n",
-    "This notebook will guide you step wise step to run causal-model python script as a kubernetes job "
+    "This notebook will guide you step wise step to create persitent volume"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79b8c310-ffd9-4fd1-b67a-2ae85b41ddfe",
+   "metadata": {},
+   "source": [
+    "<video width=\"760\" height=\"500\" controls src=\"./images/pvc_creation.mp4\" />"
    ]
   },
   {
@@ -47,10 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "68134af3-f3e5-44c9-8867-2ede47217ccb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "persistentvolumeclaim/pvc-gp-engine-unoselab01 created\n"
+     ]
+    }
+   ],
    "source": [
     "!kubectl apply -f ./yaml/pvc.yml"
    ]
@@ -72,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "0a225e0c-1a84-4057-b14e-0434c7b21daa",
    "metadata": {
     "tags": []
@@ -83,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "NAME                       STATUS   VOLUME                                     CAPACITY   ACCESS MODES   STORAGECLASS          AGE\n",
-      "pvc-gp-engine-unoselab01   Bound    pvc-4bdf8ee3-24ea-4581-ad99-ba819920916c   50Gi       RWX            rook-cephfs-central   7d7h\n"
+      "pvc-gp-engine-unoselab01   Bound    pvc-2f4047a8-f2ed-41a8-8ffd-01e92fc89f9f   50Gi       RWX            rook-cephfs-central   7s\n"
      ]
     }
    ],
