--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step3-causal-model-job.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step3-causal-model-job.ipynb
@@ -12,6 +12,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c56b484-865c-4754-8568-72504ed08066",
+   "metadata": {},
+   "source": [
+    "<video width=\"760\" height=\"500\" controls src=\"./images/pod_creation_and_copy_scripts.mp4\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a97933e2-e24d-4e74-b195-271444d29481",
    "metadata": {},
    "source": [
@@ -127,7 +135,7 @@
    },
    "outputs": [],
    "source": [
-    "! kubectl cp ../scripts/causal-model-a.py <pod-name>:/data/causal-model-a.py"
+    "! kubectl cp ./scripts/causal-model-a.py gp-engine-unoselab01-pod1:/data/causal-model-a.py"
    ]
   },
   {
@@ -137,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! kubectl cp ../scripts/run_install.sh <pod-name>:/data/run_install.sh"
+    "! kubectl cp ./scripts/run_install.sh gp-engine-unoselab01-pod1:/data/run_install.sh"
    ]
   },
   {
@@ -171,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! kubectl exec <pod-name> -- cat /data/causal-model-a.py"
+    "! kubectl exec gp-engine-unoselab01-pod1 -- cat /data/causal-model-a.py"
    ]
   },
   {
@@ -181,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! kubectl exec <pod-name> -- cat /data/run_install.sh"
+    "! kubectl exec gp-engine-unoselab01-pod1 -- cat /data/run_install.sh"
    ]
   },
   {
@@ -261,6 +269,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6db10ee-a2c5-476a-8b69-e552dc96fad5",
+   "metadata": {},
+   "source": [
+    "<video width=\"760\" height=\"500\" controls src=\"./images/running_causal_model_job.mp4\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "61646b30-8636-4eea-bfc4-c8bf398fd7fa",
    "metadata": {},
    "source": [
@@ -271,10 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "eb4c8d4d-8f9d-47c1-84d7-b2f240117a1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "job.batch/job-casual-model-gp-engine-unoselab01 created\n"
+     ]
+    }
+   ],
    "source": [
     "! kubectl create -f ./yaml/causal_model_job.yml"
    ]
@@ -299,12 +323,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "43de6aba-421e-4d28-ace9-f72e8d1ccb26",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME                                          READY   STATUS              RESTARTS   AGE\n",
+      "gp-engine-unoselab01-pod1                     1/1     Running             0          47m\n",
+      "job-casual-model-gp-engine-unoselab01-85qrx   0/1     ContainerCreating   0          36s\n"
+     ]
+    }
+   ],
+   "source": [
+    "! kubectl get pods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "945b18e5-ad6c-4c3f-9063-460ca0a7b728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "b9cbe781-1903-4ae9-85c5-19c411cecee3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "! kubectl logs -f <job-pod-name>"
+    "! kubectl logs -f job-casual-model-gp-engine-unoselab01-85qrx"
    ]
   },
   {
@@ -320,7 +376,7 @@
    "id": "ff13c354-4d93-4ec5-95cb-1ed064e94fe6",
    "metadata": {},
    "source": [
-    "<img src=\"causal-model-job-logs.png\" />"
+    "<img src=\"./images/causal-model-job-logs.png\" />"
    ]
   },
   {
