image and video path edited

--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
@@ -15,7 +15,7 @@
    "id": "95a60b68-87ba-46be-81eb-01f4f569aba9",
    "metadata": {},
    "source": [
-    "<video width=\"760\" height=\"500\" controls src=\"./images/kubernetes-configuration.mp4\" />"
+    "<video width=\"760\" height=\"500\" controls src=\"./media/kubernetes-configuration.mp4\" />"
    ]
   },
   {
@@ -35,7 +35,7 @@
     "tags": []
    },
    "source": [
-    "<img src=\"./images/get_config.png\" />"
+    "<img src=\"./media/get_config.png\" />"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "id": "690160a2-b848-4e3c-ae50-35e36e07d6ca",
    "metadata": {},
    "source": [
-    "<img src=\"./images/UploadJupyter.png\" />"
+    "<img src=\"./media/UploadJupyter.png\" />"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "id": "5124dabb-1007-480a-86d4-887050d85d7a",
    "metadata": {},
    "source": [
-    "<video width=\"760\" height=\"500\" controls src=\"./images/kubectl_setup.mp4\" />"
+    "<video width=\"760\" height=\"500\" controls src=\"./media/kubectl_setup.mp4\" />"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "id": "bfa24328-49dd-425e-a38c-3a66c2e55a6a",
    "metadata": {},
    "source": [
-    "<img src = \"./images/kubectl_version.png\"/>"
+    "<img src = \"./media/kubectl_version.png\"/>"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "id": "0c259c26-5313-44d9-b473-b596da608978",
    "metadata": {},
    "source": [
-    "<img src = \"./images/get_namespaces.png\" />"
+    "<img src = \"./media/get_namespaces.png\" />"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "id": "5244dccc-bdd8-44e5-9a4f-e7ae2c476112",
    "metadata": {},
    "source": [
-    "<video width=\"760\" height=\"500\" controls src=\"./images/k9s_installation.mp4\" />"
+    "<video width=\"760\" height=\"500\" controls src=\"./media/k9s_installation.mp4\" />"
    ]
   },
   {
@@ -304,7 +304,7 @@
    "id": "f12be30d-802b-490d-b6fc-505dc37bcadd",
    "metadata": {},
    "source": [
-    "<img src = \"./images/k9s.png\"/>"
+    "<img src = \"./media/k9s.png\"/>"
    ]
   },
   {
