--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step2-persistant_volume_creation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step2-persistant_volume_creation.ipynb
@@ -15,7 +15,7 @@
    "id": "79b8c310-ffd9-4fd1-b67a-2ae85b41ddfe",
    "metadata": {},
    "source": [
-    "<video width=\"760\" height=\"500\" controls src=\"./images/pvc_creation.mp4\" />"
+    "<video width=\"760\" height=\"500\" controls src=\"./media/pvc_creation.mp4\" />"
    ]
   },
   {
